# ur5e_rl

./: .gitignore
matlab_ros2_msgs/control_msgs/: local_setup.sh
matlab_ros2_msgs/control_msgs/cmake/: control_msgs__rosidl_typesupport_cExport-none.cmake  control_msgs__rosidl_typesupport_cppExport-none.cmake  export_control_msgs__rosidl_generator_pyExport-none.cmake  export_control_msgs__rosidl_typesupport_fastrtps_cExport-none.cmake  export_control_msgs__rosidl_typesupport_fastrtps_cppExport-none.cmake
matlab_ros2_msgs/matlab_msg_gen/glnxa64/src/control_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
matlab_ros2_msgs/matlab_msg_gen/glnxa64/src/control_msgs/include/control_msgs/: visibility_control.h
matlab_ros2_msgs/matlab_msg_gen/glnxa64/src/control_msgs/m/+ros/+internal/+ros2/+custommessages/+control_msgs/: admittanceControllerState.m  dynamicInterfaceGroupValues.m  dynamicJointState.m  followJointTrajectoryFeedback.m  followJointTrajectoryGoal.m  followJointTrajectoryResult.m  gripperCommand.m  gripperCommandFeedback.m  gripperCommandGoal.m  gripperCommandResult.m  interfaceValue.m  jointComponentTolerance.m  jointControllerState.m  jointJog.m  jointTolerance.m  jointTrajectoryControllerState.m  jointTrajectoryFeedback.m  jointTrajectoryGoal.m  jointTrajectoryResult.m  mecanumDriveControllerState.m  multiDOFCommand.m  multiDOFStateStamped.m  parallelGripperCommandFeedback.m  parallelGripperCommandGoal.m  parallelGripperCommandResult.m  pidState.m  pointHeadFeedback.m  pointHeadGoal.m  pointHeadResult.m  queryCalibrationStateRequest.m  queryCalibrationStateResponse.m  queryTrajectoryStateRequest.m  queryTrajectoryStateResponse.m  singleDOFState.m  singleDOFStateStamped.m  singleJointPositionFeedback.m  singleJointPositionGoal.m  singleJointPositionResult.m  steeringControllerStatus.m
matlab_ros2_msgs/matlab_msg_gen/glnxa64/src/control_msgs/src/: control_msgs_AdmittanceControllerState_message.cpp  control_msgs_DynamicInterfaceGroupValues_message.cpp  control_msgs_DynamicJointState_message.cpp  control_msgs_FollowJointTrajectory_action.cpp  control_msgs_GripperCommand_action.cpp  control_msgs_GripperCommand_message.cpp  control_msgs_InterfaceValue_message.cpp  control_msgs_JointComponentTolerance_message.cpp  control_msgs_JointControllerState_message.cpp  control_msgs_JointJog_message.cpp  control_msgs_JointTolerance_message.cpp  control_msgs_JointTrajectoryControllerState_message.cpp  control_msgs_JointTrajectory_action.cpp  control_msgs_MecanumDriveControllerState_message.cpp  control_msgs_MultiDOFCommand_message.cpp  control_msgs_MultiDOFStateStamped_message.cpp  control_msgs_ParallelGripperCommand_action.cpp  control_msgs_PidState_message.cpp  control_msgs_PointHead_action.cpp  control_msgs_QueryCalibrationState_service.cpp  control_msgs_QueryTrajectoryState_service.cpp  control_msgs_SingleDOFStateStamped_message.cpp  control_msgs_SingleDOFState_message.cpp  control_msgs_SingleJointPosition_action.cpp  control_msgs_SteeringControllerStatus_message.cpp
matlab_ros2_msgs/matlab_msg_gen/glnxa64/src/sensor_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
matlab_ros2_msgs/matlab_msg_gen/glnxa64/src/sensor_msgs/include/sensor_msgs/: visibility_control.h
matlab_ros2_msgs/matlab_msg_gen/glnxa64/src/sensor_msgs/m/+ros/+internal/+ros2/+custommessages/+sensor_msgs/: batteryState.m  cameraInfo.m  channelFloat32.m  compressedImage.m  fluidPressure.m  illuminance.m  image.m  imu.m  jointState.m  joy.m  joyFeedback.m  joyFeedbackArray.m  laserEcho.m  laserScan.m  magneticField.m  multiDOFJointState.m  multiEchoLaserScan.m  navSatFix.m  navSatStatus.m  pointCloud.m  pointCloud2.m  pointField.m  range.m  regionOfInterest.m  relativeHumidity.m  setCameraInfoRequest.m  setCameraInfoResponse.m  temperature.m  timeReference.m
matlab_ros2_msgs/matlab_msg_gen/glnxa64/src/sensor_msgs/src/: sensor_msgs_BatteryState_message.cpp  sensor_msgs_CameraInfo_message.cpp  sensor_msgs_ChannelFloat32_message.cpp  sensor_msgs_CompressedImage_message.cpp  sensor_msgs_FluidPressure_message.cpp  sensor_msgs_Illuminance_message.cpp  sensor_msgs_Image_message.cpp  sensor_msgs_Imu_message.cpp  sensor_msgs_JointState_message.cpp  sensor_msgs_JoyFeedbackArray_message.cpp  sensor_msgs_JoyFeedback_message.cpp  sensor_msgs_Joy_message.cpp  sensor_msgs_LaserEcho_message.cpp  sensor_msgs_LaserScan_message.cpp  sensor_msgs_MagneticField_message.cpp  sensor_msgs_MultiDOFJointState_message.cpp  sensor_msgs_MultiEchoLaserScan_message.cpp  sensor_msgs_NavSatFix_message.cpp  sensor_msgs_NavSatStatus_message.cpp  sensor_msgs_PointCloud2_message.cpp  sensor_msgs_PointCloud_message.cpp  sensor_msgs_PointField_message.cpp  sensor_msgs_Range_message.cpp  sensor_msgs_RegionOfInterest_message.cpp  sensor_msgs_RelativeHumidity_message.cpp  sensor_msgs_SetCameraInfo_service.cpp  sensor_msgs_Temperature_message.cpp  sensor_msgs_TimeReference_message.cpp
matlab_ros2_msgs/sensor_msgs/cmake/: sensor_msgsConfig.cmake
matlab_ros2_msgs/std_msgs/cmake/: std_msgsConfig.cmake
matlab_ros2_msgs/trajectory_msgs/cmake/: trajectory_msgsConfig.cmake
matlab_ws/: dhparameters  dhparameters.m  moveJac.m  pid_parameters.asv  pid_parameters.m  results.csv  testUR5e.m  ur5e_publish_joints.asv  ur5e_publish_joints.m
mujoco/mujoco/: THIRD_PARTY_NOTICES
mujoco/mujoco/lib/: libmujoco.so.2.3.6
ros2_ws/: MUJOCO_LOG.TXT  angles.npz  calibracao_cam.npz  camera_to_object.npz
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/capturas_realsense/: capture_000_depth.npy  capture_001_depth.npy  (+15 more)
ros2_ws/src/mujoco_ros/: package.xml  setup.py
ros2_ws/src/mujoco_ros/assets/: ur5e_env.xml
ros2_ws/src/mujoco_ros/assets/mujoco_menagerie/realsense_d435i/: d435i.xml
ros2_ws/src/mujoco_ros/assets/mujoco_menagerie/universal_robots_ur5e/: scene.xml  ur5e.xml
ros2_ws/src/mujoco_ros/assets/mujoco_menagerie/universal_robots_ur5e/assets/: ferramenta1.mtl
ros2_ws/src/mujoco_ros/mujoco_ros/: env.py  home_position.py  mujoco.py  mujoco_rl.py  reset_state.py  wind_cam.py
(+136 files in other folders)
